# NYC-TLC-Yellow-Taxi-Data-Pipeline-Analytics

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/marts/: _marts.yml  dim_zone.sql  fct_flow_od.sql  fct_hourly_demand.sql  fct_zone_features.sql
dbt_project/models/staging/: _sources.yml  stg_weather_hourly.sql  stg_yellow_trips.sql
docs/: ARCHITECTURE.md  LAPORAN.md  slides.md
prefect_flows/: main_flow.py
src/nyc_tlc/: config.py
src/nyc_tlc/clean/: run.py
src/nyc_tlc/dashboard/: Home.py  components.py  data.py  theme.py
src/nyc_tlc/dashboard/pages/: 1_Geospatial.py  2_Weather_Impact.py  3_ML_Insights.py
src/nyc_tlc/ingest/: run.py  tlc.py  weather.py  zones.py
src/nyc_tlc/ml/: clustering.py  features.py  profiles.py  train.py
src/nyc_tlc/utils/: __init__.py  duckdb_conn.py  logging.py
