[project]
name = "nyc-tlc-data-pipeline"
version = "0.1.0"
description = "NYC TLC Yellow Taxi data pipeline with weather integration and zone clustering."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Anindhita Faiza Aulia" },
    { name = "Aniza Helwa Mahanani" },
    { name = "Muhamad Fahry Pratama Putra" },
    { name = "Muhammad Atha Tsaqif" },
    { name = "Nafis Naufal Rahman" },
    { name = "Richard Samuel Hatane" },
]

dependencies = [
    # Core data
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Pipeline orchestration
    "prefect>=3.1.0",
    # SQL transformations
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",
    # Geospatial
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    # ML (bonus)
    "scikit-learn>=1.5.0",
    # HTTP
    "requests>=2.32.0",
    # Dashboard
    "streamlit>=1.39.0",
    "streamlit-folium>=0.23.0",
    "folium>=0.18.0",
    "pydeck>=0.9.0",
    "plotly>=5.24.0",
    # Utilities
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_tlc"]
